--- a/JavaScript/e-commerce2022/client/media/style.css
+++ b/JavaScript/e-commerce2022/client/media/style.css
@@ -31,3 +31,21 @@
 .card-products button:hover {
     opacity: 0.7;
 }
+
+/*cart button*/
+.cart-btn {
+    position: fixed;
+    top: 90vh;
+    right: 40px;
+    background-color: #191919;
+    padding: 10px;
+    border-radius: 50%;
+    height: 24px;
+    width: 24px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.cart-btn:hover {
+    cursor: pointer;
+    opacity: 0.9;
+}
