--- a/Java/L02/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
+++ b/Java/L02/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="utn.tienda_libros.vista.LibroFrom">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="675" height="400"/>
@@ -8,7 +8,7 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="ce329" class="javax.swing.JLabel" binding="panel">
+      <component id="ce329" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -59,14 +59,14 @@
                   <text value="Libro"/>
                 </properties>
               </component>
-              <component id="21e50" class="javax.swing.JTextField" binding="libroTextoTextField" default-binding="true">
+              <component id="21e50" class="javax.swing.JTextField" binding="libroTexto">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="libroTexto"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
@@ -87,14 +87,14 @@
                   <text value="Autor"/>
                 </properties>
               </component>
-              <component id="93b6e" class="javax.swing.JTextField" binding="autorTextoTextField" default-binding="true">
+              <component id="93b6e" class="javax.swing.JTextField" binding="autorTexto">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="autorTexto"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
@@ -115,14 +115,14 @@
                   <text value="Precio"/>
                 </properties>
               </component>
-              <component id="e1bd9" class="javax.swing.JTextField" binding="precioTextoTextField" default-binding="true">
+              <component id="e1bd9" class="javax.swing.JTextField" binding="precioTexto">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="precioTexto"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
@@ -143,14 +143,14 @@
                   <text value="Existencias"/>
                 </properties>
               </component>
-              <component id="3c5b" class="javax.swing.JTextField" binding="existenciasTextoTextField" default-binding="true">
+              <component id="3c5b" class="javax.swing.JTextField" binding="existenciasTexto">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
-                  <text value="existenciasTexto"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
